@@ -6,7 +6,7 @@
 \authoraddress{
         Email: \email{mike@hobbshouse.org}
 }
-\release{1.0 beta 2}
+\release{1.0}
 \setshortversion{1.0}
 
 \newcommand{\Erlang}{\ulink{Erlang}{http://www.erlang.org/}}
