@@ -1,3 +1,6 @@
+Candygram 1.0:
+    * No changes from beta 2.
+
 Candygram 1.0 beta 2:
     * Changed behavior of list patterns to repeat last element.
     * A single Receiver object may be used by multiple processes.
